--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ DerivedData/
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
+/assets/module/bundle.c
+/assets/module/include/bundle.h
