--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ DerivedData/
 .netrc
 /assets/module/bundle.c
 /assets/module/include/bundle.h
+/lib/glad/include/glad/glad.h
+/lib/glad/include/KHR/khrplatform.h
+/lib/glad/src/glad.c
